# privacy-option

./: README  Test.hs  privacy-option.cabal
Data/POL/: Observable.hs  PersonalData.hs  Purpose.hs  Time.hs
Language/: POL.hs
Language/POL/: Syntax.hs
Language/POL/Syntax/: Test.hs
Semantics/POL/: HumanReadable.hs  Management.hs  Valuation.hs
