name:                privacy-option
version:             0.1.0.0
synopsis:            A framework for defining privacy contract languages
description:         The Privacy Option Language: a framework for defining
                     privacy contract languages.
homepage:            https://github.com/ZjMNZHgG5jMXw/privacy-option
license:             BSD3
license-file:        LICENSE
author:              Stefan Berthold
maintainer:          stefan.berthold@kau.se
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  exposed-modules:
    Language.POL
    Language.POL.Syntax
    Data.POL.Purpose
    Data.POL.PersonalData
    Data.POL.Observable
    Data.POL.Time
    Semantics.POL.Management
    Semantics.POL.Valuation
    Semantics.POL.HumanReadable
    Language.SimPOL
    Language.SimPOL.Template
    Language.SimPOL.Template.Disclose
    Language.SimPOL.Template.Option
    Language.SimPOL.Template.Obs
    Language.SimPOL.Template.Retention
    Data.SimPOL.PersonalData
    Data.SimPOL.Purpose
    Data.SimPOL.Observable
    Data.SimPOL.Time
    Semantics.SimPOL.Management
    Text.Dialog
    Text.PrettyXHTML
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base          >=4.6     && <4.7,
    parallel      >=3.2     && <3.3,
    transformers  >=0.3     && <0.4,
    readline      >=1.0     && <1.1,
    xhtml         >=3000.2  && <3000.3,
    containers    >=0.5     && <0.6
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite canonical-contracts
  type:             exitcode-stdio-1.0
  main-is:          Test.hs
  build-depends:
    base          >=4.6     && <4.7,
    parallel      >=3.2     && <3.3,
    transformers  >=0.3     && <0.4,
    readline      >=1.0     && <1.1,
    xhtml         >=3000.2  && <3000.3,
    containers    >=0.5     && <0.6
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/ZjMNZHgG5jMXw/privacy-option

-- vim: ft=cabal:sts=2:sw=2:tw=80:et:nu:ai
