name:                privacy-option
version:             0.1.0.0
synopsis:            A framework for defining privacy contract languages
description:         The Privacy Option Language: a framework for defining
                     privacy contract languages.
homepage:            https://github.com/ZjMNZHgG5jMXw/privacy-option
license:             BSD3
license-file:        LICENSE
author:              Stefan Berthold
maintainer:          stefan.berthold@kau.se
category:            Language
build-type:          Simple
extra-source-files:  README
cabal-version:       >=1.10

library
  exposed-modules:
    Language.POL
    Language.POL.Syntax
    Data.POL.Observable
    Semantics.POL.Management
    Semantics.POL.Valuation
    Semantics.POL.HumanReadable
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base          >=4.6     && <4.7,
    transformers  >=0.3     && <0.4,
    containers    >=0.5     && <0.6
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options: -Wall

test-suite canonical-contracts
  type:             exitcode-stdio-1.0
  main-is:          Language/POL/Syntax/Test.hs
  build-depends:
    base          >=4.6     && <4.7,
    transformers  >=0.3     && <0.4,
    containers    >=0.5     && <0.6
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type:     git
  location: https://github.com/ZjMNZHgG5jMXw/privacy-option.git

-- vim: ft=cabal:sts=2:sw=2:tw=80:et:nu:ai
